results/smartbugs/Elysium/arithmetic/overflow_simple_add/overflow_simple_add.out
 ______     __         __  __     ______     __     __  __     __    __    
/\  ___\   /\ \       /\ \_\ \   /\  ___\   /\ \   /\ \/\ \   /\ "-./  \   
\ \  __\   \ \ \____  \ \____ \  \ \___  \  \ \ \  \ \ \_\ \  \ \ \-./\ \  
 \ \_____\  \ \_____\  \/\_____\  \/\_____\  \ \_\  \ \_____\  \ \_\ \ \_\ 
  \/_____/   \/_____/   \/_____/   \/_____/   \/_/   \/_____/   \/_/  \/_/ 
                                                                           
Compiling source code...
Error: Solidity compilation failed!
smartbugs/dataset/arithmetic/overflow_simple_add.sol:7:1: SyntaxError: Source file requires different compiler version (current compiler is 0.4.26+commit.4563c3fc.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity 0.4.25;
^---------------------^

Error: The compilation did not produce any output!
Please check the source code!
